# GroupB_StratAirlift

./: .gitignore  CMakeLists.txt  CheckConfig.cmake  README.md  makefile
CMakeModules/: CodeCoverage.cmake
data/: .airports.csv.icloud
src/: CMakeLists.txt  export.c  main.c
test/src/: parse_config_test.c  test_main.c
tests/: CMakeLists.txt  README.md
tests/include/: common_test_functions.h
tests/src/: check_main.c  common_test_functions.c
